--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ h1 {
 
 section {
     display: flex;
+    margin-bottom: 150px;
 }
 
 .half-width {
@@ -21,6 +22,16 @@ section {
 }
 
 .half-width img {
+    width: 80%;
+
+}
+
+.half-width1 {
+    width: 100%;
+
+}
+
+.half-width1 img {
     width: 70%;
 
 }
@@ -40,4 +51,10 @@ section {
     background-image: url(images/top-banner.png);
     background-repeat: no-repeat;
 
+}
+
+.dream-big {
+    background-image: url(images/dream-bg.png);
+    background-repeat: no-repeat;
+    background-position: right;
 }
