--- a/style.css
+++ b/style.css
@@ -7,11 +7,15 @@ h1 {
     font-size: 50px;
 }
 
+h2 {
+    font-size: 40px;
+}
+
 .orange-color {
     color: orange;
 }
 
-section {
+.flexible-container {
     display: flex;
     margin-bottom: 150px;
 }
@@ -19,20 +23,11 @@ section {
 .half-width {
     width: 50%;
     padding-left: 5%;
+
 }
 
 .half-width img {
     width: 80%;
-
-}
-
-.half-width1 {
-    width: 100%;
-
-}
-
-.half-width1 img {
-    width: 70%;
 
 }
 
@@ -44,7 +39,6 @@ section {
     border-radius: 5px;
     font-weight: 700;
     color: white;
-
 }
 
 .top-banner {
@@ -58,4 +52,31 @@ section {
     background-repeat: no-repeat;
     background-position: right;
 
+}
+
+.experiences-item {
+    width: 40%;
+    margin-left: 5%;
+    margin-right: 5%;
+    padding-left: 20px;
+    border-radius: 10px;
+    box-shadow: 10px 10px 30px gray;
+}
+
+.experiences-area {
+    background-image: url(images/exp-bg.png);
+    background-repeat: no-repeat;
+    background-position: left;
+}
+
+#Full-Stack-Developer {
+    border-left: 7px solid tomato;
+}
+
+#Baby-Web-Developer {
+    border-left: 7px solid blue;
+}
+
+footer p {
+    text-align: center;
 }
